# wyoming-cloud-streamer

./: Dockerfile  LICENSE.md  README.md  config.yaml  pyproject.toml  repository.yaml
rootfs/etc/services.d/wyoming/: run
wyoming_cloud_streamer/: __init__.py  __main__.py  engines.py  handler.py  voices.json
